# Millisecond

./: .gitignore  DEVELOPMENT.md  README.md  io.github.gaheldev.Millisecond.json  io.github.gaheldev.ProAudioSetup.json  makefile  meson.build  version
.github/workflows/: release.yml
data/: io.github.gaheldev.Millisecond.desktop.in  io.github.gaheldev.Millisecond.metainfo.xml.in  io.github.gaheldev.Millisecond.service.in  io.github.gaheldev.ProAudioSetup.desktop.in  io.github.gaheldev.ProAudioSetup.gschema.xml  io.github.gaheldev.ProAudioSetup.metainfo.xml.in  io.github.gaheldev.ProAudioSetup.service.in  meson.build
data/icons/: meson.build
debian/: README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  millisecond.cron.d.ex  millisecond.doc-base.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/millisecond/DEBIAN/: control  md5sums
debian/millisecond/usr/share/applications/: io.github.gaheldev.Millisecond.desktop
debian/upstream/: metadata.ex
doc/: nixos.md
po/: POTFILES.in  meson.build
src/: diagnostic.py  main.py  meson.build  millisecond.gresource.xml  millisecond.in  proaudio-setup.gresource.xml  proaudio-setup.in  rtcqs.py  rtfix.py  utils.py  window.py  window.ui
src/gtk/: help-overlay.ui
src/rtfix/: dma_latency.py  governor.py  hyperthreading.py  swappiness.py  template.py  utils.py
test/deb/: Dockerfile  build  entrypoint.sh  run  test-all-distros
test/deb/test-pkg/: millisecond_0.1.0-1_amd64.deb
(+9 files in other folders)
